exercise-4.1/log-output-multi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-multi-service
  namespace: exercises
spec:
  selector:
    app: log-output-multi
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
