exercise-4.1/log-output-multi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-multi-ingress
spec:
  rules:
  - http:
      paths:
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: log-output-multi-service
            port:
              number: 80
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 80
